--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,7 +34,11 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_dashboardFragment_to_createTransactionFragment"
-            app:destination="@id/createTransactionFragment" />
+            app:destination="@id/createTransactionFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_login"
