done with validating create transaction fields

--- a/app/src/main/res/layout/fragment_create_transaction.xml
+++ b/app/src/main/res/layout/fragment_create_transaction.xml
@@ -91,6 +91,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    verify_field="@{viewModel.transactionTitleNameError}"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="16dp"
@@ -106,11 +107,11 @@
                         android:id="@+id/transaction_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@={viewModel.transaction_title}"
                         android:fontFamily="@font/googlesans_regular"
                         android:inputType="textEmailAddress"
                         android:padding="20dp"
-                        android:singleLine="true"/>
+                        android:singleLine="true"
+                        android:text="@={viewModel.transaction_title}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <!-- Buyers Details -->
@@ -141,6 +142,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
+                        verify_field="@{viewModel.sellerNameError}"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
                         android:hint="@string/sellers_name"
@@ -166,6 +168,7 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        verify_field="@{viewModel.sellerEmailError}"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
@@ -193,6 +196,7 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        verify_field="@{viewModel.sellerPhoneError}"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
@@ -243,6 +247,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="20dp"
+                            verify_field="@{viewModel.buyerNameError}"
                             android:layout_marginEnd="16dp"
                             android:fontFamily="@font/googlesans_regular"
                             android:hint="@string/buyer_name"
@@ -268,6 +273,7 @@
                             android:id="@+id/buyer_email_field"
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                             android:layout_width="match_parent"
+                            verify_field="@{viewModel.buyerEmailError}"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="20dp"
@@ -298,6 +304,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="20dp"
+                            verify_field="@{viewModel.buyerPhoneError}"
                             android:layout_marginEnd="16dp"
                             android:fontFamily="@font/googlesans_regular"
                             android:hint="@string/buyer_phonenumber"
@@ -345,6 +352,7 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        verify_field="@{viewModel.productTypeNameError}"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
@@ -373,6 +381,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
+                        verify_field="@{viewModel.productTypeError}"
                         android:layout_marginTop="20dp"
                         android:hint="@string/product_type"
                         android:layout_marginEnd="16dp"
@@ -401,6 +410,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
+                        verify_field="@{viewModel.productDescriptionError}"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
@@ -428,6 +438,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
+                        verify_field="@{viewModel.productQuantityError}"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
@@ -456,6 +467,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
+                        verify_field="@{viewModel.productPriceError}"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
                         android:hint="@string/product_Price"
@@ -483,6 +495,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
+                        verify_field="@{viewModel.whoPaysError}"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
                         android:hint="@string/who_is_paying"
@@ -511,6 +524,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
+                        verify_field="@{viewModel.paymentMethodError}"
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="16dp"
                         android:fontFamily="@font/googlesans_regular"
