droping a build now 🤗🥳🥳🥳

--- a/app/src/main/res/layout/fragment_register_auth.xml
+++ b/app/src/main/res/layout/fragment_register_auth.xml
@@ -69,7 +69,6 @@
                 android:layout_width="match_parent"
                 android:text="@={data.firstName}"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
                 android:inputType="textPersonName"
                 android:fontFamily="@font/googlesans_regular"
                 android:padding="20dp"
@@ -96,7 +95,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@={data.lastName}"
-                android:textColor="@color/white"
                 android:inputType="textPersonName"
                 android:fontFamily="@font/googlesans_regular"
                 android:padding="20dp"
@@ -123,7 +121,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@={data.email}"
-                android:textColor="@color/white"
                 android:inputType="textEmailAddress"
                 android:fontFamily="@font/googlesans_regular"
                 android:padding="20dp"
@@ -137,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            verify_field="@{data.myname}"
+            verify_field="@{data.phone}"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/googlesans_regular"
             android:hint="Mobile Number"
@@ -150,7 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:text="@={data.name}"
+                android:text="@={data.phoneNumber}"
                 android:fontFamily="@font/googlesans_regular"
                 android:padding="20dp"
                 android:singleLine="true" />
