--- a/app/src/main/res/layout/sucess_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/sucess_bottom_sheet_dialogue.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:background="?android:colorBackground"
         android:layout_height="wrap_content">
@@ -20,43 +22,122 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/title"
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/any"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/googlesans_medium"
-                android:text="Create a Transaction"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                android:layout_marginTop="10dp"
+                android:gravity="center_horizontal"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:padding="20dp">
+                <TextView
+                    android:text="Transaction Title"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/googlesans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/trans_title"
+                    tools:text="buy car"
+                    android:textSize="25dp"
+                    android:fontFamily="@font/googlesans_medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/transprice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/rounded_gray_background"
+                android:padding="20dp">
+                <TextView
+                    android:text="Total Price"
+                    android:textSize="12dp"
+                    android:fontFamily="@font/googlesans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/trans_price"
+                    tools:text="500,00"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/googlesans_medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/transtype"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/rounded_gray_background"
+                android:padding="20dp">
+                <TextView
+                    android:text="Payment Method"
+                    android:textSize="12dp"
+                    android:fontFamily="@font/googlesans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:text="Bank Transfer"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/googlesans_medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:text="A virtual account has been generated for you in the link."
+                    android:textSize="12dp"
+                    android:fontFamily="@font/googlesans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/statuss"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/rounded_gray_background"
+                android:padding="20dp">
+                <TextView
+                    android:text="Transaction status"
+                    android:textSize="12dp"
+                    android:fontFamily="@font/googlesans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/transa_status"
+                    tools:text="Hello"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/googlesans_medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <Button
+                android:id="@+id/url_button"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/primaryColor"
+                android:layout_marginBottom="20dp"
                 android:fontFamily="@font/googlesans_medium"
-                android:text="Create a Transaction"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-            <TextView
-                android:id="@+id/status"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/googlesans_medium"
-                android:text="Create a Transaction"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-            <TextView
-                android:id="@+id/url"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/googlesans_medium"
-                android:text="Create a Transaction"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                style="@style/buttons"
+                android:textAllCaps="false"
+                android:text="Share link with buyer"
+                android:layout_height="wrap_content"/>
 
 
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
