--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,15 +30,18 @@
         android:name="com.adashi.escrow.ui.dashboard.DashboardFragment"
         android:label="DashboardFragment" >
         <action
-            android:id="@+id/action_dashboardFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-        <action
             android:id="@+id/action_dashboardFragment_to_createTransactionFragment"
             app:destination="@id/createTransactionFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_RegisterAuthFragment"
+            app:destination="@id/RegisterAuthFragment" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_login"
@@ -60,9 +63,5 @@
         tools:layout="@layout/fragment_create_transaction"
         android:id="@+id/createTransactionFragment"
         android:name="com.adashi.escrow.ui.createtransaction.CreateTransactionFragment"
-        android:label="CreateTransactionFragment" >
-        <action
-            android:id="@+id/action_createTransactionFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
+        android:label="CreateTransactionFragment" />
 </navigation>
