--- a/app/src/main/res/layout/transaction_item_layout.xml
+++ b/app/src/main/res/layout/transaction_item_layout.xml
@@ -22,6 +22,7 @@
         <TextView
             android:id="@+id/date_and_time"
             android:layout_width="wrap_content"
+            android:fontFamily="@font/googlesans_regular"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             amount="@{data.createdAt.toString()}"
@@ -34,6 +35,7 @@
             android:id="@+id/withdrawal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/googlesans_medium"
             amount="@{data.title}"
             tools:text="Transfer - Enike Braimoh"
             app:layout_constraintBottom_toTopOf="@+id/date_and_time"
@@ -61,8 +63,10 @@
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/googlesans_medium"
             tools:text="-2,0000"
             amount="@{data.price}"
+            currency_converter="@{data.price}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ammount" />
