--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,55 +1,329 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
+       <androidx.constraintlayout.widget.ConstraintLayout
+           android:background="?android:colorBackground"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           tools:context=".ui.settings.SettingsFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:colorBackground"
-        tools:context=".ui.settings.SettingsFragment">
+           <TextView
+               android:id="@+id/head"
+               style="@style/texts"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginTop="@dimen/margin_20_dp"
+               android:fontFamily="@font/googlesans_medium"
+               android:text="Settings"
+               android:textAlignment="center"
+               android:textAppearance="@style/TextAppearance.AppCompat.Title"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/head"
-            style="@style/texts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/googlesans_medium"
-            android:text="Settings"
-            android:layout_marginTop="@dimen/margin_20_dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+           <ScrollView
+               android:layout_marginTop="@dimen/margin_20_dp"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintTop_toBottomOf="@id/head"
+               android:layout_width="match_parent"
+               android:layout_height="0dp">
+
+               <androidx.constraintlayout.widget.ConstraintLayout
+                   android:paddingBottom="@dimen/margin_20_dp"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:id="@+id/tit1"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="20dp"
+                       android:fontFamily="@font/googlesans_medium"
+                       android:text="Profile"
+                       app:layout_constraintStart_toStartOf="@+id/profile_cat_1"
+                       app:layout_constraintTop_toTopOf="parent" />
+                   <LinearLayout
+                       android:id="@+id/profile_cat_1"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="20dp"
+                       android:layout_marginTop="@dimen/margin_10_dp"
+                       android:layout_marginEnd="@dimen/margin_20_dp"
+                       android:background="@drawable/rounded_gray_background"
+                       android:gravity="center_vertical"
+                       android:orientation="vertical"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toBottomOf="@+id/tit1">
+
+                       <LinearLayout
+                           android:clickable="true"
+                           android:foreground="?android:attr/selectableItemBackground"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="Edit Profile"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
+
+                       <LinearLayout
+                           android:clickable="true"
+                           android:foreground="?android:attr/selectableItemBackground"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="Manage Beneficiaries"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
 
 
-        <LinearLayout
-            app:layout_constraintTop_toBottomOf="@id/head"
-            android:id="@+id/sellers_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/rounded_gray_background">
 
-            <TextView
-                android:fontFamily="@font/googlesans_medium"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
-                android:text="Security"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                   </LinearLayout>
 
-        </LinearLayout>
+                   <TextView
+                       android:id="@+id/tit2"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="20dp"
+                       android:fontFamily="@font/googlesans_medium"
+                       android:text="Security"
+                       app:layout_constraintStart_toStartOf="@+id/profile_cat_1"
+                       app:layout_constraintTop_toBottomOf="@+id/profile_cat_1" />
+                   <LinearLayout
+                       android:id="@+id/security"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="20dp"
+                       android:layout_marginTop="@dimen/margin_10_dp"
+                       android:layout_marginEnd="@dimen/margin_20_dp"
+                       android:background="@drawable/rounded_gray_background"
+                       android:gravity="center_vertical"
+                       android:orientation="vertical"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toBottomOf="@+id/tit2">
+
+                       <LinearLayout
+                           android:clickable="true"
+                           android:foreground="?android:attr/selectableItemBackground"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="Withdrawal Bank"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
+
+                       <LinearLayout
+                           android:clickable="true"
+                           android:foreground="?android:attr/selectableItemBackground"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="Change Password"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
+                       <LinearLayout
+                           android:clickable="true"
+                           android:foreground="?android:attr/selectableItemBackground"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="Change PIN"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                   </LinearLayout>
+
+
+                   <TextView
+                       android:id="@+id/tit3"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="20dp"
+                       android:fontFamily="@font/googlesans_medium"
+                       android:text="Account &amp; Support"
+                       app:layout_constraintStart_toStartOf="@+id/security"
+                       app:layout_constraintTop_toBottomOf="@+id/security" />
+                   <LinearLayout
+                       android:id="@+id/account"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="20dp"
+                       android:layout_marginTop="@dimen/margin_10_dp"
+                       android:layout_marginEnd="@dimen/margin_20_dp"
+                       android:background="@drawable/rounded_gray_background"
+                       android:gravity="center_vertical"
+                       android:orientation="vertical"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toBottomOf="@+id/tit3">
+
+                       <LinearLayout
+                           android:clickable="true"
+                           android:foreground="?android:attr/selectableItemBackground"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="Help and Support"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
+
+                       <LinearLayout
+                           android:clickable="true"
+                           android:foreground="?android:attr/selectableItemBackground"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="About Escrow"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
+
+                   </LinearLayout>
+
+                   <LinearLayout
+                       android:clickable="true"
+                       android:foreground="?android:attr/selectableItemBackground"
+                       android:id="@+id/account2"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="20dp"
+                       android:layout_marginTop="@dimen/margin_30_dp"
+                       android:layout_marginEnd="@dimen/margin_20_dp"
+                       android:background="@drawable/rounded_gray_background"
+                       android:gravity="center_vertical"
+                       android:orientation="vertical"
+                       app:layout_constraintEnd_toEndOf="parent"
+                       app:layout_constraintStart_toStartOf="parent"
+                       app:layout_constraintTop_toBottomOf="@+id/account">
+
+                       <LinearLayout
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:gravity="center_vertical"
+                           android:orientation="horizontal"
+                           android:padding="@dimen/margin_20_dp">
+
+                           <ImageView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:src="@drawable/ic_dashboard_icon" />
+
+                           <TextView
+                               android:layout_width="wrap_content"
+                               android:layout_height="wrap_content"
+                               android:layout_marginStart="20dp"
+                               android:fontFamily="@font/googlesans_medium"
+                               android:text="Logout"
+                               android:textColor="#F51919"
+                               android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />
+                       </LinearLayout>
+
+
+                   </LinearLayout>
+               </androidx.constraintlayout.widget.ConstraintLayout>
+
+           </ScrollView>
+
+       </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
