--- a/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
@@ -9,8 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:colorBackground">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
